objects/Sales_Contract__c.object
<CustomObject>
    <fields>
        <fullName>ASP_2_Terms__c</fullName>
        <label>ASP 2 Terms</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASP_2__c</fullName>
        <label>ASP 2</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASP_3_Terms__c</fullName>
        <label>ASP 3 Terms</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASP_3__c</fullName>
        <label>ASP 3</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASP_Terms__c</fullName>
        <label>ASP Terms</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASP__c</fullName>
        <label>ASP</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Acceptance__c</fullName>
        <label>Acceptance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Specified Clause</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Coverage__c</fullName>
        <label>Contract Coverage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All Samples</fullName>
                </value>
                <value>
                    <fullName>Medicare Only</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contract Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <label>Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
                <value>
                    <fullName>Bio/Pharma</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <label>Contract #</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coverage_Notes__c</fullName>
        <label>Coverage Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Creditworthiness__c</fullName>
        <label>Creditworthiness</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes AR &lt; 1% Cash</fullName>
                </value>
                <value>
                    <fullName>Yes Dispensation</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Euro</fullName>
                </value>
                <value>
                    <fullName>Franc</fullName>
                </value>
                <value>
                    <fullName>Peso</fullName>
                </value>
                <value>
                    <fullName>Pound</fullName>
                </value>
                <value>
                    <fullName>Yen</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_of_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Date of Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Volume__c</fullName>
        <label>Estimated Volume</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>200</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Future_Discount_Clause__c</fullName>
        <label>Future Discount Clause</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>G360_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <label>G360 Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Main_Acct_GHI__c</fullName>
        <formula>Sales_Contract_Account__r.Account__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Main Acct. GHI #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_Patient__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Name of Patient</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>12533</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_1_Notes__c</fullName>
        <label>Other 1 Notes</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_2_Notes__c</fullName>
        <label>Other 2 Notes</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_3_Notes__c</fullName>
        <label>Other 3 Notes</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other 3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Panel_Development__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Panel Development</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Patient_DOB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Patient DOB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payment_Contact_Details__c</fullName>
        <description>Name, address, phone, email, etc.</description>
        <inlineHelpText>Name, address, phone, email, etc.</inlineHelpText>
        <label>Payment Contact Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Payment_Contact_Name__c</fullName>
        <label>Payment Contact Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Terms__c</fullName>
        <label>Payment Terms</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N30</fullName>
                </value>
                <value>
                    <fullName>N45</fullName>
                </value>
                <value>
                    <fullName>N60</fullName>
                </value>
                <value>
                    <fullName>N75</fullName>
                </value>
                <value>
                    <fullName>N90</fullName>
                </value>
                <value>
                    <fullName>30EOM</fullName>
                </value>
                <value>
                    <fullName>45EOM</fullName>
                </value>
                <value>
                    <fullName>60EOM</fullName>
                </value>
                <value>
                    <fullName>90EOM</fullName>
                </value>
                <value>
                    <fullName>Post Insurance Collection</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Performance_Obligation__c</fullName>
        <label>Performance Obligation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Previous_ASP__c</fullName>
        <description>Hidden field that records old ASP value when changed. Used for email templates</description>
        <label>Previous ASP</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Previous_End_Date__c</fullName>
        <description>Hidden field that records previous value of End Date when this field changes. Used for Email templates.</description>
        <label>Previous End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Price_of_Test__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Price of Test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Process__c</fullName>
        <label>Process</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CLIA</fullName>
                </value>
                <value>
                    <fullName>ResOps</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Record__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Record #</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rel_Accts_GHI__c</fullName>
        <formula>Related_Account_1__r.Account__c 
&amp; &quot;, &quot; &amp; 
Related_Account_2__r.Account__c 
&amp; &quot;, &quot; &amp; 
Related_Account_3__r.Account__c 
&amp; &quot;, &quot; &amp; 
Related_Account_4__r.Account__c 
&amp; &quot;, &quot; &amp; 
Related_Account_5__r.Account__c 
&amp; &quot;, &quot; &amp; 
Related_Account_6__r.Account__c 
&amp; &quot;, &quot; &amp; 
Related_Account_7__r.Account__c 
&amp; &quot;, &quot; &amp; 
Related_Account_8__r.Account__c 
&amp; &quot;, &quot; &amp; 
Related_Account_9__r.Account__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rel. Accts. GHI #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Account_10__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Account 10</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sales Contracts (Related Account 10)</relationshipLabel>
        <relationshipName>Sales_ContractsSUhE</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Account_11__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Account 11</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sales Contracts (Related Account 11)</relationshipLabel>
        <relationshipName>Sales_ContractsSUhT</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Account_12__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Account 12</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sales Contracts (Related Account 12)</relationshipLabel>
        <relationshipName>Sales_ContractsSUhs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Account_GHI_s__c</fullName>
        <label>Related Account GHI #&apos;s</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revenue_Recognition_Principle__c</fullName>
        <label>Revenue Recognition Principle</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accrual</fullName>
                </value>
                <value>
                    <fullName>Cash-Basis</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Right_of_Return_Reject_Post_Acceptance__c</fullName>
        <label>Right of Return/Reject Post-Acceptance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SEC_Account__c</fullName>
        <formula>Sales_Contract_Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SEC Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SEC_Active_Notification_Date__c</fullName>
        <label>SEC Active Notification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SEC_Termination_Notification_Date__c</fullName>
        <label>SEC Termination Notification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Contract_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Contract Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sales Contracts</relationshipLabel>
        <relationshipName>Sales_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Special_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Special Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Standard_Panel__c</fullName>
        <label>Standard Panel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>G360 v2.9</fullName>
                </value>
                <value>
                    <fullName>G360 v2.10</fullName>
                </value>
                <value>
                    <fullName>G360 Any Version</fullName>
                </value>
                <value>
                    <fullName>G360 Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Negotiation</fullName>
                </value>
                <value>
                    <fullName>Signed</fullName>
                </value>
                <value>
                    <fullName>Terminated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Sales Contract</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Main_Acct_GHI__c</columns>
        <columns>Contract_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Contract_Coverage__c</columns>
        <columns>Payment_Terms__c</columns>
        <columns>ASP__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
        <sharedTo>
            <group>Finance_Account_Share</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Sales Contract Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Contracts</pluralLabel>
    <recordTypes>
        <fullName>Bio_Pharma</fullName>
        <active>true</active>
        <label>Bio/Pharma</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard</fullName>
        <active>true</active>
        <label>Enterprise/International</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Contract_Coverage_Notes</fullName>
        <active>true</active>
        <description>If &quot;Other&quot; is chosen as the contract coverage type, then Coverage Notes is required.</description>
        <errorConditionFormula>ISPICKVAL ( Contract_Coverage__c, &apos;Other&apos;)
&amp;&amp;
(ISBLANK(  Coverage_Notes__c ))</errorConditionFormula>
        <errorDisplayField>Coverage_Notes__c</errorDisplayField>
        <errorMessage>Coverage Notes are required when choosing &quot;Other&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Contract_Field_Requirements</fullName>
        <active>true</active>
        <description>If Contract #, the remaining fields in the Sales Enterprise Contracts will be required.</description>
        <errorConditionFormula>AND
(NOT(ISBLANK(Contract__c)),
OR(
ISBLANK (Effective_Date__c),
OR(
ISBLANK (End_Date__c))))</errorConditionFormula>
        <errorDisplayField>Contract__c</errorDisplayField>
        <errorMessage>If Contract # is populated, Effective Date &amp; End Date are required.</errorMessage>
    </validationRules>
</CustomObject>